feat: create regex solution to lab 1

--- a/lab1/Makefile
+++ b/lab1/Makefile
@@ -3,7 +3,13 @@ CPP_SRC = ./regex/regex.cpp
 FLEX_SRC = ./flex/scan.l
 TESTS = ./input.txt
 CC = gcc
+CXXFLAGS = -std=c++11
+
 
 smc:
 	cd smc/my && make clean && make all
 	smc/my/checkstring $(TESTS)
+
+regex:
+	python3 regex/regex.py
+
